[package]
name = "gltf"
version = "0.7.0"
authors = ["alteous <alteous@outlook.com>"]
description = "glTF 2.0 loader"
documentation = "https://docs.rs/gltf"
repository = "https://github.com/alteous/gltf"
homepage = "https://github.com/alteous/gltf"
readme = "README.md"
keywords = ["glTF", "3D", "asset", "model", "scene"]
license = "MIT/Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[badges]
travis-ci = { repository = "alteous/gltf" }

[dependencies]
gltf-json = { path = "./gltf-json" }
lazy_static = "0.2"

[features]
default = []
extras = []
names = []
